# dedlock

./: CMakeLists.txt  README.md  conanfile.txt
src/: main.cpp  pass.sh
